changed menu entry

--- a/build.gradle
+++ b/build.gradle
@@ -163,12 +163,12 @@ android {
         productFlavors {
             // used for f-droid
             generic {
-                applicationId 'com.nextcloud.client'
+                applicationId 'com.leviia.client'
                 dimension "default"
             }
 
             gplay {
-                applicationId 'com.nextcloud.client'
+                applicationId 'com.leviia.client'
                 dimension "default"
             }
 
